# release-note-generator

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: db.py  main.py  models.py  repositories.py  schemas.py
app/api/: routes.py
app/core/: config.py  errors.py  security.py
app/services/: ai.py  domain.py
docs/: INTERVIEW_GUIDE.md
tests/: conftest.py  test_health.py  test_workflow.py
